# ThemeCooker

./: .gitignore  README.md  main.py  pyproject.toml
theme_generator/: new.sh
theme_generator/scripts/: generate_btop.py  generate_chromium.py  generate_eza.py  generate_ghostty.py  generate_hyprland.py  generate_hyprlock.py  generate_icons.py  generate_kitty.py  generate_mako.py  generate_neovim.py  generate_swayosd.py  generate_vscode.py  generate_walker.py  generate_waybar.py
theme_generator/templates/: alacritty_template.toml  btop_template.theme  hyprland_template.conf  hyprlock_template.conf  mako_template.ini  swayosd_template.css  walker_template.css  waybar_template.css
theme_generator/yaml/: alacritty.yaml  chromium.yaml  eza.yaml  hyprland.yaml  hyprlock.yaml  kitty.yaml  swayosd.yaml
themecooker/: analyze_configuration.py  extract_palette.py  get_palette_from_images.py  get_palette_preview.py  get_template.py  let_me_cook.py  theme_analyze.py
themecooker/generator/: configuration.yaml  generate_theme.py  generate_theme_config.py
themecooker/generator/config/: theme_configuration_template.yaml
themecooker/generator/config/theme_configurations/tokyonight/: configuration.yaml
themecooker/generator/templates/: chromium_template.theme  kitty_template.conf
themecooker/theme_generator/scripts/: generate_alacritty.py  generate_btop.py  generate_eza.py  generate_hyprlock.py  generate_icons.py  generate_kitty.py  generate_mako.py  generate_neovim.py  generate_swayosd.py  generate_vscode.py
themecooker/theme_generator/templates/: eza_template.yml
themecooker/theme_generator/yaml/: btop.yaml  mako.yaml  walker.yaml  waybar.yaml
